<resources>
    <string name="app_name">SLC</string>


    <string name="ok">Confirmer</string>
    <string name="cancel">Annuler</string>
    <string name="unavailable_network_error">Il semblerait que vous êtes hors ligne,Merci de vérifier votre connexion Internet et réessayer.</string>
    <string name="unavailable_network_error_title">Erreur de connexion</string>
    <string name="close"> Fermer </string>
    <string name="login">Se connecter</string>
    <string name="password">Mot de passe</string>
    <string name="email">E-mail</string>
    <string name="welcome">Bienvenue!</string>
    <string name="server_error">Une erreur est survenue. Merci de réessayer.</string>
    <string name="server_error_title">Erreur.</string>
    <string name="retry">Réessayer</string>
    <string name="session_expired">Session expiré</string>
    <string name="session_expired_statement">Your current session has expired, please reconnect to continue.</string>
    <string name="confirm">Confirmer</string>
    <string name="connection_failed"> Échec de connexion</string>
    <string name="incorrect_username_or_password">Email ou le mot de passe est incorrect.</string>
    <string name="email_non_valid_error">Entrer une adresse mail valide</string>
    <string name="password_length_error">Le mot de passe doit contenir plus de 4 caractères</string>
    <string name="logout">"Se déconnecter"</string>
    <string name="do_you_really_want_to_logout">"Voulez-vous vraiment vous déconnecter?"</string>
    <string name="attention">Attention</string>

    <string name="super_admin">Super Admin</string>
    <string name="secretariat">Secretariat</string>
    <string name="workshop_access_control">Acces control atelier</string>
    <string name="hotel_access_control">Acces control hotel</string>
    <string name="event_access_control">Acces control evenement</string>
    <string name="restaurant">Restaurant</string>
    <string name="conference">Conference</string>

    <string name="permission_required"> Autorisation est requise </string>
    <string name="allow">Autoriser</string>

    <string name="access_files_permission_statement">demande accès au fichier internes</string>
    <string name="camera_permission_statement">demande accès au camera</string>
    <string name="gps_permission_statement">demande accès au Géolocalisation </string>


    // Zebra zd420

    <string name="action_settings">Add a Printer</string>
    <string name="zebra_technologies_corp">Zebra Technologies Corp.</string>
    <string name="zebra_address_line_1"><b>ISV TEAM</b>, Lincolnshire IL, 60069.</string>
    <string name="zebra_address_line_2">Visit <a href="https://developer.motorolasolutions.com/welcome">developer.zebra.com</a> for more support.</string>

    <string name="print">Print</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <string name="printer_status">Printer Status</string>
    <string name="rotation_prompt">Choose a rotation</string>
    <string name="image_selection">Select an Image</string>

    <string name="store_check">Check to store on printer</string>
    <string name="path_hint">Path to store on printer</string>
    <string name="printer_selection">Select a Printer</string>
    <string name="discovered_printers">Discovered printers</string>
    <string name="searching_for_printers">Searching for printers&#8230;</string>
    <string name="connecting_to_printer">Connecting to printer&#8230;</string>
    <string name="printer_connected">Printer connected</string>
    <string name="printer_connection_failed">Printer connection failed</string>
    <string name="connected_to_printer">Connected to printer:</string>
    <string name="connection_error">Connection error</string>
    <string name="print_successful">Print successful</string>
    <string name="print_failed">Print failed:</string>
    <string name="printer_paused">Printer paused</string>
    <string name="head_open">Head open</string>
    <string name="paper_out">Paper out</string>
    <string name="cannot_print">Cannot print</string>
    <string name="no_printers_found">No printers found</string>

</resources>