<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.home.HomeFragment">

    <data>


        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.aymen.slc.ui.main.superAdmin.SuperAdminViewModel" />


    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="20dp"
                    android:paddingBottom="16dp">


                    <RelativeLayout
                        android:id="@+id/zebraHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="16dp"
                        android:background="@android:color/white"
                        android:elevation="8dp"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/zebraLogo"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="false"
                            android:layout_alignParentBottom="false"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_spanner" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="8dp"
                            android:layout_toRightOf="@+id/zebraLogo"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/zebra_technologies_corp"
                                android:textColor="@android:color/black"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/zebra_address_line_1"
                                android:textColor="@android:color/black"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/launchpad_link"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/zebra_address_line_2"
                                android:textColor="@android:color/black"
                                android:textSize="14sp" />


                        </LinearLayout>

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/white"
                        android:orientation="vertical">

                        <RadioGroup
                            android:id="@+id/radioGroup"
                            android:layout_width="fill_parent"
                            android:layout_height="50dp"
                            android:background="@color/white"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/ipDnsRadio"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:checked="true"
                                android:text="IP/DNS"
                                android:textColor="@android:color/white"
                                android:textSize="18dp" />

                            <RadioButton
                                android:id="@+id/bluetoothRadio"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="Bluetooth (R)"
                                android:textColor="@android:color/white"
                                android:textSize="18dp" />
                        </RadioGroup>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/ipAddressText"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Ip Address:"
                                android:textSize="18.0sp" />

                            <EditText
                                android:id="@+id/ipAddressInput"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:inputType="textNoSuggestions|text" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp">

                            <TextView
                                android:id="@+id/portText"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Port:"
                                android:textSize="18.0sp" />

                            <EditText
                                android:id="@+id/portInput"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:inputType="number"
                                android:maxLength="5"
                                android:text="9100" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginBottom="8dp">

                            <TextView
                                android:id="@+id/macAddressText"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="MAC Address:"
                                android:textSize="18.0sp" />

                            <EditText
                                android:id="@+id/macInput"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:enabled="false"
                                android:inputType="textNoSuggestions|text" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/statusText"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:gravity="center_horizontal"
                            android:text="Status: Not Connected"
                            android:textSize="18.0sp" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/white"
                        android:elevation="8dp">

                        <Button
                            android:id="@+id/testButton"
                            android:layout_width="fill_parent"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:background="@android:color/white"
                            android:text="Test"
                            android:textColor="@color/primary"
                            android:textStyle="bold" />

                    </LinearLayout>


                </LinearLayout>

                <FrameLayout
                    android:id="@+id/selectedPrinterFragmentContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/selectedPrinterFragmentContainer"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true">

                    <ImageView
                        android:id="@+id/zebraFooterLogo"
                        android:layout_width="139dp"
                        android:layout_height="48dp"
                        android:layout_gravity="bottom"
                        android:layout_margin="8dp"
                        android:src="@drawable/ic_no_network" />

                </FrameLayout>

            </RelativeLayout>

        </ScrollView>

    </LinearLayout>

</layout>